Dec 07, 2012 - chris ---------------------------------------------------
o Minor performance improvement if HAM_ENABLE_FSYNC and HAM_ENABLE_TRANSACTIONS

Dec 06, 2012 - chris ---------------------------------------------------
o Removed the deprecated flags HAM_HINT_UBER_FAST_ACCESS, HAM_HINT_RANDOM_ACCESS
    and HAM_HINT_SEQUENTIAL

Dec 05, 2012 - chris ---------------------------------------------------
o Changed interface of ham_cursor_create from
        ham_cursor_create(ham_db_t *db, ham_txn_t *txn, ham_u32_t flags,
            ham_cursor_t **cursor);
    to
        ham_cursor_create(ham_cursor_t **cursor, ham_db_t *db, ham_txn_t *txn,
            ham_u32_t flags);
o Renamed several functions to improve consistency:
    ham_get_error -> ham_db_get_error
    ham_set_prefix_compare_func -> ham_db_set_prefix_compare_func
    ham_set_compare_func -> ham_db_set_compare_func
    ham_find -> ham_db_find
    ham_insert -> ham_db_insert
    ham_erase -> ham_db_erase
    ham_get_key_count -> ham_db_get_key_count
    ham_get_parameter -> ham_db_get_parameter
    ham_get_env -> ham_db_get_env
    ham_close -> ham_db_close

Dec 02, 2012 - chris ---------------------------------------------------
o Removed ham_env_new, ham_env_delete, ham_new, ham_delete and modified
	the parameters of ham_env_create, ham_env_open, ham_env_create_db 
	and ham_env_open_db
o Removed ham_open, ham_open_ex, ham_create, ham_create_ex; creating an
	Environment is now mandatory

Nov 21, 2012 - chris ---------------------------------------------------
o Renamed HAM_DB_READ_ONLY to HAM_WRITE_PROTECTED
o Removed ham_env_create; renamed ham_env_create_ex to ham_env_create
o Removed ham_env_open; renamed ham_env_open_ex to ham_env_open
o Removed deprecated flags HAM_DISABLE_FREELIST_FLUSH, HAM_LOCK_EXCLUSIVE,
    HAM_IN_MEMORY_DB
o Refactored ham_get_parameters, ham_env_get_parameters and HAM_PARAM_*:
    - HAM_PARAM_GET_FLAGS -> renamed to HAM_PARAM_FLAGS